--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
+dev_dependencies:
+  flutter_lints: ^2.0.1
+
 flutter:
   plugin:
     platforms:
